2009-12-04  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Prevent the inspector from closing its wrapping widget.
        This is not necessary anymore since we now hide the embedded
        close button.
        https://bugs.webkit.org/show_bug.cgi?id=32149

        * WebCoreSupport/InspectorClientQt.cpp:
        (WebCore::InspectorClientQt::showWindow):
        (WebCore::InspectorClientQt::closeWindow):

2009-12-03  İsmail Dönmez  <ismail@namtrac.org>

        Reviewed by Eric Seidel.

        Fix compilation when SVG is disabled.

        * Api/qwebframe.cpp:
        (qt_drt_pauseSVGAnimation):

2009-12-03  Brady Eidson  <beidson@apple.com>

        Reviewed by Sam Weinig.

        <rdar://problem/7214236> and http://webkit.org/b/32052 - Implement HTML5 state object history API

        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::dispatchDidPushStateWithinPage):
        (WebCore::FrameLoaderClientQt::dispatchDidReplaceStateWithinPage):
        (WebCore::FrameLoaderClientQt::dispatchDidPopStateWithinPage):
        * WebCoreSupport/FrameLoaderClientQt.h:

2009-12-03  Pavel Feldman  <pfeldman@dhcp-172-28-174-220.spb.corp.google.com>

        Reviewed by Timothy Hatcher.

        Web Inspector: Simplify the settings support in inspector controller.

        https://bugs.webkit.org/show_bug.cgi?id=32076

        * WebCoreSupport/InspectorClientQt.cpp:
        (WebCore::InspectorClientQt::populateSetting):
        (WebCore::InspectorClientQt::storeSetting):
        (WebCore::variantToSetting):
        (WebCore::settingToVariant):
        * WebCoreSupport/InspectorClientQt.h:

2009-12-03  Ben Murdoch  <benm@google.com>

        Reviewed by Brady Eidson.

        [Android] The FrameLoaderClient is unaware of BackForwardList changes.
        https://bugs.webkit.org/show_bug.cgi?id=31914

        * WebCoreSupport/FrameLoaderClientQt.cpp: